Fixed spacing issue with account dropdown menu by configuring the dropdown to auto position itself and enabled the renderInPlace flag

--- a/app/styles/layouts/main.css
+++ b/app/styles/layouts/main.css
@@ -196,7 +196,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
-    overflow-y: auto;
+    overflow: visible;
 }
 
 /* Global search
